Fixed inputs for potions 5-8

--- a/settings/custom/user.settings
+++ b/settings/custom/user.settings
@@ -195,7 +195,7 @@ accelerated_degeneration_rate=1.75
 MaxNameLength=64
 Enabled=true
 [RandomEncountersMENU]
-Difficulty=1
+Difficulty=0
 dayFrequency=2
 nightFrequency=2
 [SCOptionPrepAlch]
@@ -261,7 +261,8 @@ EAPMult=1.0
 TrollDam=1.0
 NecroDam=1.0
 [Audio]
-MusicVolume=85
+SoundVolume=85
+MusicVolume=80
 Subtitles=true
 [AMMRoachBags]
 BagsEnabled=true
@@ -424,7 +425,8 @@ ReinsSelection=0
 MotionSicknessFocusMode=true
 DisableAutomaticSwordSheathe=true
 Difficulty=4
-AutosaveTimeInterval=5
+AutosaveTimeInterval=8
+HudTutorialEnabled=false
 EnableUberMovement=1
 AutoCameraCenter=false
 [W3CT_UI]
@@ -568,7 +570,7 @@ ArmsEnabled=
 CapeSelection=0
 CapeEnabled=false
 [ImmersiveCamPositionsHorse]
-hbAutoRot=2.0
+hbAutoRot=3.0
 [Visuals]
 AllowClothSimulationOnGpu=false
 InventoryBgColorScaleB=0.036
@@ -588,13 +590,13 @@ DecalsSpawnDistanceCutoff=10
 GlobalOceanTesselationFactor=64
 CascadeShadowFadeTreshold=1
 HairWorksGlobalWidthLimit=2.25
-CascadeShadowDistanceScale2=2.5
+CascadeShadowDistanceScale2=1.5
 MaxTextureAnizotropy=0
 DynamicDecalsChunkLimit=300
 HairWorksGlobalStrandSmoothness=2
 HairWorksGlobalDensityQuality=0.75
 TextureMemoryBudget=4084
-CascadeShadowDistanceScale3=2
+CascadeShadowDistanceScale3=1.5
 HairWorkstGlobalDensityLimit=0.35
 TextureStreamingHeadsDistanceLimitSq=100
 MeshLODDistanceScale=10
@@ -614,13 +616,15 @@ TextureInFlightBudget=128
 TextureInFlightCountBudget=12
 PreserveSystemGamma=false
 TerrainErrorMetricMultiplier=6
-CascadeShadowmapSize=2048
-CascadeShadowDistanceScale0=3
+CascadeShadowmapSize=3072
+CascadeShadowDistanceScale0=1
 MeshRenderingDistanceScale=1
 CascadeShadowQuality=1
 CharacterShadowsFallbackDistance=40
 HairWorksAALevel=0
-CascadeShadowDistanceScale1=3
+CascadeShadowDistanceScale1=1
+[W3CT_Horse]
+bAutoFollowRoad=true
 [Enemy]
 EnemyONOFF=false
 tempYEnemy=350
@@ -654,7 +658,7 @@ fhudMinimapZoomBoat=0.5
 SvswEnabled=true
 AMMDisabled=false
 AutohideEnabled=
-CrossbowEnabled=
+CrossbowEnabled=true
 StswEnabled=true
 BodyEnabled=
 HeadEnabled=true
@@ -687,9 +691,9 @@ scaleDamagedItems=0.9
 tempYItemInfo=57
 [encounterChanceNight]
 enableGroupMonsters=4
-enableWildHunt=4
+enableWildHunt=5
 enableHumanEnemies=3
-enableFlyingMonsters=2
+enableFlyingMonsters=1
 enableGroundMonsters=6
 [SCOptionCA]
 ADRGenD=1.0
@@ -927,13 +931,13 @@ BlockHits3=15
 [monsterList]
 Endrega=1
 NightWraiths=1
-Centipede=false
+Centipede=1
 Wight=1
 Cyclops=0
 Forktails=1
 Wolves=1
 Sharley=false
-Echinops=false
+Echinops=1
 Wyverns=1
 Leshens=1
 Hags=1
@@ -945,11 +949,11 @@ Fogling=1
 Rotfiends=1
 Fiends=0
 Ghouls=1
-Barghest=false
+Barghest=1
 Drowners=1
 Bears=1
-Garkain=false
-Fleder=false
+Garkain=1
+Fleder=1
 Harpies=0
 Arachas=1
 HigherVamp=0
@@ -957,15 +961,15 @@ Elementals=0
 Troll=0
 Boars=1
 Nekkers=1
-Vampires=false
+Vampires=1
 NoonWraiths=1
 Alghouls=1
 Gryphons=1
 Giant=0
-Kikimore=false
+Kikimore=true
 Skeleton=1
-DrownerDLC=false
-Bruxa=false
+DrownerDLC=1
+Bruxa=1
 Golems=0
 Werewolves=1
 [MinimapandQuests]
@@ -1008,11 +1012,11 @@ tempYBoss=381.5
 tempXBoss=200
 tempXComp=45
 [encounterChanceDay]
-enableGroupMonsters=3
+enableGroupMonsters=4
 enableWildHunt=0
-enableHumanEnemies=4
+enableHumanEnemies=5
 enableFlyingMonsters=3
-enableGroundMonsters=2
+enableGroundMonsters=3
 [Kinect]
 Kinect=true
 [Foliage]
